--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "chart.js": "2.9.4",
+        "vue-chartjs": "^3.5.1",
         "vuejs-datatable": "^2.0.0-alpha.7"
     }
 }
