--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
         "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.49.0",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
-        "vue-loader": "^15.9.8",
+        "vue-loader": "17.0.0",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "axios": "^0.21",
         "chart.js": "2.9.4",
+        "follow-redirects": "1.14.7",
         "node-forge": ">=1.0.0",
         "vue-chartjs": "3.5.1",
         "vuejs-datatable": "^2.0.0-alpha.7"
