--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "sass": "^1.49.0",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
-        "vue-loader": "17.0.0",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
